--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -14,6 +14,6 @@ spring:
 
 mybatis:
   mapperLocations: classpath:mapper/*.xml
-  type-aliases-package: com.atguigu.springcloud.entities
+  type-aliases-package: com.llh.springcloud.entities
 
 
