--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -12,6 +12,15 @@ spring:
     username: root
     password: Caonima8769!
 
+
+eureka:
+  client:
+    register-with-eureka: true
+    fetchRegistry: true
+    service-url:
+      defaultZone: http://eureka7001.com:7001/eureka/,http://eureka7002.com:7002/eureka/
+
+
 mybatis:
   mapperLocations: classpath:mapper/*.xml
   type-aliases-package: com.llh.springcloud.entities
